# parsing_hh

./: README.md  main.py  pyproject.toml
src/: abstract_head_hunter_api.py  abstract_json_saver.py  head_hunter_api.py  json_saver.py  utils.py  vacancy.py
tests/: conftest.py  test_head_hunter_api.py  test_json_saver.py  test_utils.py  test_vacancy.py
