[tool.poetry]
name = "parsing-hh"
version = "0.1.0"
description = ""
authors = ["Ivan Tomilin <i.tomilin.91@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
